--- a/myDemoGit.ipynb
+++ b/myDemoGit.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "myDemoGit.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOmJwJRvztUnr3x+pxoCY9r",
+      "authorship_tag": "ABX9TyOxA2n3QO9aftfkX57SFhsu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,6 +48,29 @@
       ],
       "source": [
         "print('hello Github')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('second time to say hello')"
+      ],
+      "metadata": {
+        "id": "SAnwrVRO7rZM",
+        "outputId": "4152e20e-ad70-4c3e-aa84-ec6505f650a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "second time to say hello\n"
+          ]
+        }
       ]
     }
   ]
